# hogsend

./: .dockerignore  .gitignore  2026-07-09-stringly-typed-reference-hardening-plan.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.course  Dockerfile.docs  Dockerfile.docs.dockerignore  LICENSE  README.md  ROADMAP.md  biome.json  commitlint.config.ts  docker-compose.prod.yml  docker-compose.yml  install.sh  knip.jsonc  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.course.toml  railway.docs.toml  railway.toml  railway.toml.phase6  railway.worker.toml  railway.worker.toml.phase6  turbo.json
.changeset/: admin-events-contact-fanout.md  agent-headless-scaffold.md  ai-agent-integration.md  align-scaffold-line.md  align-supporting-packages.md  analytics-event-fanout.md  analytics-provider-contract.md  attribution-coverage.md  attribution-engine.md  attribution-impact.md  bare-hogsend-alias.md  blueprint-hardening.md  blueprint-promote-cli.md  boot-validate-config-ids.md  bootstrap-connect-busy-port.md  bucket-lifecycle.md  buckets-feature-complete.md  buckets-primitive.md  byo-email-provider-event.md  campaign-reaper-stale-since.md  campaign-scheduling-definecampaign.md  campaign-stats-campaign-id.md  campaign-waves-email-steps.md  channel-preferences.md  cli-buckets-skill-refresh.md  cli-skills-refresh.md  cli-upgrade-nontty.md  client-side-layer.md  (+121 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
(+1731 files in other folders)
